k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: solarease
  labels:
    app.kubernetes.io/part-of: solarease
    name: solarease
